# poly-myanmar-gc

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  validate-deployment.sh
.agent/: plan.md  worker-telegram-deterministic-plan.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_task.yml  infra_ops.yml
.github/workflows/: ci.yml  dependency-review.yml
apps/api/: README.md  main.py  pyproject.toml  requirements.txt  vercel.json  vercel_app.py
apps/api/src/api/: __init__.py  deps.py  main.py  models.py  settings.py  store.py  store_protocol.py  supabase_client.py  supabase_store.py
apps/api/src/api/repositories/: admin.py  collab.py  events.py  health.py  helpers.py  profiles.py  resources.py  telegram.py
apps/api/src/api/routers/: __init__.py  admin.py  collab.py  events.py  health.py  me.py  profiles.py  resources.py  telegram.py
apps/api/tests/: conftest.py  test_me_router.py  test_store_contract.py
apps/web/: README.md  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/app/: providers.tsx  theme.tsx
apps/web/src/lib/: api.ts  domain.ts  mock-api.ts  query.tsx  schemas.ts  supabase.ts  utils.ts
apps/web/src/pages/: admin-page.tsx  auth-page.tsx  collab-page.tsx  complete-profile-page.tsx  events-page.tsx  legal-page.tsx  profiles-page.tsx  (+3 more)
apps/worker/: README.md  pyproject.toml
apps/worker/src/worker/: __init__.py  api_client.py  jobs.py  main.py  settings.py
apps/worker/tests/: test_worker_phase5.py
docs/: contracts.md  deletion.md  github-setup.md  guidelines.md  privacy.md  terms.md
supabase/functions/admin-approval-notifier/: README.md  index.ts
supabase/migrations/: 0001_init.sql  0002_add_events_capacity.sql  0003_restructure_profiles_table.sql  0004_make_name_optional.sql  0005_profiles_optional_null_columns.sql  0006_set_sg_timezone_default.sql  0007_add_public_preferences.sql
(+16 files in other folders)
