[project]
name = "api"
version = "0.1.0"
description = "Poly Myanmar GC API service"
readme = "README.md"
authors = [
    { name = "myriosMin", email = "minmyrios@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-telegram-bot>=22.7",
    "supabase>=2.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
api = "api.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "python-dotenv>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
