[project]
name = "worker"
version = "0.1.0"
description = "Poly Myanmar GC background worker"
readme = "README.md"
authors = [
    { name = "myriosMin", email = "minmyrios@gmail.com" }
]
requires-python = ">=3.11.11"
dependencies = [
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
worker = "worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
